src/objects/GP_Evento_General_Batch__c.object
<CustomObject>
    <fields>
        <fullName>ID_GP__c</fullName>
        <label>ID GP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Suscriptor__c</fullName>
        <label>ID Suscriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Titular__c</fullName>
        <label>ID Titular</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JsonAtribute__c</fullName>
        <label>JsonAtribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tipo_de_evento__c</fullName>
        <label>Tipo de evento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GP Evento General Batch</label>
    <nameField>
        <label>GP Evento General Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Eventos General Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>